// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/index.js Server Side Application builds webpack config that matches the snapshot 1`] = `
Object {
  "context": "<cwd>/assets",
  "devtool": "cheap-module-eval-source-map",
  "entry": Object {
    "main": Array [
      "./scripts/main.js",
    ],
  },
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "<cwd>/assets",
        ],
        "test": /\\.js$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "presets": Array [
                Array [
                  "env",
                  Object {
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      Object {
        "include": Array [
          "<cwd>/assets",
        ],
        "test": /\\.scss$/,
        "use": Array [
          Object {
            "loader": "<cwd>/node_modules/@gladeye/bento/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "publicPath": "../",
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "ident": "postcss",
              "plugins": [Function plugins],
              "sourceMap": false,
            },
          },
          Object {
            "loader": "resolve-url-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": Array [
          /node_modules/,
        ],
        "test": /\\.css$/,
        "use": Array [
          Object {
            "loader": "<cwd>/node_modules/@gladeye/bento/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "publicPath": "../",
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "<cwd>/assets",
        ],
        "test": /\\.(ttf|eot|woff2?|png|jpe?g|gif|svg)$/,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "[path][name].[ext]",
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\.(ttf|eot|woff2?|png|jpe?g|gif|svg)$/,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "vendor/[name].[ext]",
            },
          },
        ],
      },
    ],
  },
  "output": Object {
    "filename": "scripts/[name].js",
    "path": "<cwd>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "styles/[name].css",
      "id": 1,
      "options": Object {
        "disable": true,
      },
    },
    CleanWebpackPlugin {
      "options": Object {
        "allowExternal": false,
        "dry": false,
        "root": "<cwd>",
        "verbose": false,
      },
      "paths": Array [
        "<cwd>/public/assets",
      ],
    },
    ManifestPlugin {
      "opts": Object {
        "basePath": "",
        "fileName": "manifest.json",
        "filter": null,
        "generate": [Function generate],
        "map": null,
        "seed": null,
        "transformExtensions": /^(gz|map)$/i,
        "writeToFileEmit": true,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env": Object {
          "NODE_ENV": "\\"test\\"",
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "resolve": Object {
    "alias": Object {
      "@": "<cwd>/assets",
      "~": "<cwd>/assets/scripts",
    },
  },
}
`;

exports[`config/index.js Server Side Application bundles using webpack correctly 1`] = `
Object {
  "images/background.jpg": "/assets/images/background.912ae359.jpg",
  "images/nice.jpg": "/assets/images/nice.9c3c4150.jpg",
  "scripts/_manifest.js": "/assets/scripts/_manifest.d5f6378e.js",
  "scripts/_vendor.js": "/assets/scripts/_vendor.d2ca492b.js",
  "scripts/main.js": "/assets/scripts/main.9c5645b4.js",
  "styles/main.css": "/assets/styles/main.02b62d85.css",
}
`;

exports[`config/index.js Single Page Application builds webpack config that matches the snapshot 1`] = `
Object {
  "context": "<cwd>/app",
  "devtool": "cheap-module-eval-source-map",
  "entry": Object {
    "main": Array [
      "./scripts/main.js",
    ],
  },
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "<cwd>/app",
        ],
        "test": /\\.js$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "presets": Array [
                Array [
                  "env",
                  Object {
                    "targets": Object {
                      "browsers": Array [
                        "> 1%",
                        "last 2 versions",
                        "Firefox ESR",
                      ],
                    },
                    "useBuiltIns": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      Object {
        "include": Array [
          "<cwd>/app",
        ],
        "test": /\\.scss$/,
        "use": Array [
          Object {
            "loader": "<cwd>/node_modules/@gladeye/bento/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "publicPath": "../",
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "ident": "postcss",
              "plugins": [Function plugins],
              "sourceMap": false,
            },
          },
          Object {
            "loader": "resolve-url-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": Array [
          /node_modules/,
        ],
        "test": /\\.css$/,
        "use": Array [
          Object {
            "loader": "<cwd>/node_modules/@gladeye/bento/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "publicPath": "../",
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "<cwd>/app",
        ],
        "test": /\\.(ttf|eot|woff2?|png|jpe?g|gif|svg)$/,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "[path][name].[ext]",
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\.(ttf|eot|woff2?|png|jpe?g|gif|svg)$/,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "vendor/[name].[ext]",
            },
          },
        ],
      },
    ],
  },
  "output": Object {
    "filename": "scripts/[name].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "styles/[name].css",
      "id": 1,
      "options": Object {
        "disable": true,
      },
    },
    CleanWebpackPlugin {
      "options": Object {
        "allowExternal": false,
        "dry": false,
        "root": "<cwd>",
        "verbose": false,
      },
      "paths": Array [
        "<cwd>/public",
      ],
    },
    ManifestPlugin {
      "opts": Object {
        "basePath": "",
        "fileName": "manifest.json",
        "filter": null,
        "generate": [Function generate],
        "map": null,
        "seed": null,
        "transformExtensions": /^(gz|map)$/i,
        "writeToFileEmit": true,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env": Object {
          "NODE_ENV": "\\"test\\"",
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "./index.ejs",
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {
      "@": "<cwd>/app",
      "~": "<cwd>/app/scripts",
    },
  },
}
`;

exports[`config/index.js Single Page Application bundles using webpack correctly 1`] = `
Object {
  "images/background.jpg": "/images/background.912ae359.jpg",
  "images/nice.jpg": "/images/nice.9c3c4150.jpg",
  "scripts/_manifest.js": "/scripts/_manifest.2082a84b.js",
  "scripts/_vendor.js": "/scripts/_vendor.d2ca492b.js",
  "scripts/main.js": "/scripts/main.9c5645b4.js",
  "styles/main.css": "/styles/main.02b62d85.css",
}
`;
